# envappconfig

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
envappconfig/: __init__.py  envappconfig.py  exceptions.py
tests/: test_envappconfig.py
