[tool.poetry]
name = "envappconfig"
version = "0.0.1"
description = "Simple app configuration via environment variables, in the spirit of argparse."
authors = ["Spectric Labs <foss@spectric.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
